# chroma

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  dummy.cpp  lit.cfg.py
.github/workflows/: tests.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
example/critical_section/: CMakeLists.txt  conanfile.py
example/critical_section/include/: lock.hpp
example/critical_section/src/: main.cpp
example/gui/: CMakeLists.txt  conanfile.py
example/gui/include/: gl.h  glut.h  ui.h
example/gui/include/_impl/: wrappers.h
example/gui/src/: main.cpp
example/io/: CMakeLists.txt  conanfile.py
example/io/include/: safe_io.hpp
example/io/src/: main.cpp
include/: chroma
test/: base.verify.cpp  simple.hpp  simple.pass.cpp  simple.verify.cpp  stages.verify.cpp  unignorable.pass.cpp  unignorable.verify.cpp  unignorable2.verify.cpp  unrelated.verify.cpp  with.pass.cpp  with.verify.cpp
